Fixes to run android